css and alignment fixes

--- a/src/assets/scss/base/_datepicker.scss
+++ b/src/assets/scss/base/_datepicker.scss
@@ -79,7 +79,6 @@
     }
 }
 
-.form-control,
 .vdp-datepicker {
     display: block;
     width: 100%;
