--- a/src/assets/scss/base/_navigation.scss
+++ b/src/assets/scss/base/_navigation.scss
@@ -24,7 +24,7 @@
             a {
                 color: #706978;
                 text-decoration: none;
-                padding: 16px 0;
+                padding: 16px 12px;
                 display: block;
                 span {
                     font-size: $font-size-base;
